--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -3,7 +3,11 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <h2>My Contact Information</h2>
+    <h2>My Contact Information</h2> 
+</head>
+<body>
+    
+
     <hr>
     <h3>Address</h3>
     <table>
@@ -12,7 +16,7 @@
     </tr>
     <tr> <td>9567 Forrest Lane</td> 
            <tr><td> Lone Pine</td></tr>  
-        <td>Nevada</td></tr></p>
+        <td>Nevada</td></tr></p> 
 
 </table>
 <p><h3>Phone Number</h3></p>
